--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,11 @@ body {
 }
 
 .container {
-  margin: 10px;
+  margin: 40px 10px;
+  text-align: center;
 }
 
 canvas {
   border: 1px solid rgb(50, 50, 50);
+  background: rgb(255, 255, 255);
 }
