--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,21 @@ canvas {
   border: 1px solid rgb(50, 50, 50);
   background: rgb(255, 255, 255);
 }
+
+.bottom {
+  margin-top: 20px;
+}
+
+.nice-btn {
+  padding: 10px;
+  border: none;
+  background: rgb(20, 20, 20);
+  color: #FFFFFF;
+  font-size: 16px;
+  letter-spacing: 2px;
+}
+
+.nice-btn:hover {
+  cursor: pointer;
+  color: rgb(255, 248, 127);
+};
